# smart-wallet-stellar

./: .gitignore  Cargo.toml  README.md
contracts/adapters/yield_adapter/: Cargo.toml
contracts/adapters/yield_adapter/src/: lib.rs
contracts/condition_verifier/: Cargo.toml
contracts/condition_verifier/src/: lib.rs
contracts/condition_verifier/test_snapshots/tests/: consume_attestation_accepts_quorum_signed_proof.1.json  consume_attestation_rejects_duplicate_attestor_entries.1.json  governance_delay_change_is_delayed_and_affects_future_schedules.1.json  ownership_transfer_is_delayed_and_cancellable.1.json  removing_attestor_that_would_break_threshold_is_rejected.1.json  scheduled_attestor_is_not_active_until_applied.1.json  threshold_cannot_be_set_to_zero.1.json  threshold_change_is_delayed_and_cancellable.1.json
contracts/intent_registry/: Cargo.toml
contracts/intent_registry/src/: errors.rs  lib.rs  storage.rs  types.rs
contracts/smart_account/: Cargo.toml
contracts/smart_account/src/: errors.rs  lib.rs  storage.rs  types.rs
contracts/smart_account/test_snapshots/tests/: adapter_execution_rejects_amount_above_adapter_specific_cap.1.json  adapter_execution_rejects_asset_outside_adapter_allowlist.1.json  bootstrap_admin_can_rotate.1.json  bootstrap_admin_can_store_signer_and_session.1.json  check_auth_accepts_active_ed25519_signer.1.json  duplicate_capability_is_rejected.1.json  execute_automation_consumes_capability_once_per_child_id.1.json  execute_automation_consumes_required_attestation.1.json  execute_automation_rejects_missing_required_attestation.1.json  execute_automation_rejects_when_attestor_quorum_is_not_met.1.json  execute_interactive_dispatches_to_enabled_adapter.1.json  execute_interactive_dispatches_to_split_adapter.1.json  execute_interactive_dispatches_to_yield_adapter.1.json  execute_interactive_rejects_destination_not_in_account_allowlist.1.json  execute_interactive_rejects_disabled_adapter.1.json  execute_interactive_rejects_when_policy_engine_disallows_payments.1.json  execute_interactive_updates_session_consumption_and_revokes_at_cap.1.json  finalize_recovery_requires_delay_and_rotates_signers.1.json  governance_and_management_thresholds_can_diverge.1.json  governance_auth_accepts_primary_signer_context.1.json  governance_auth_rejects_session_signer_context.1.json  governance_threshold_cannot_exceed_governance_capable_weight.1.json  guardian_signers_take_over_recovery_plane_when_configured.1.json  initiate_recovery_freezes_account_and_blocks_execution.1.json  interactive_auth_rejects_mismatched_bound_signer_id.1.json  management_auth_accepts_primary_signer_context.1.json  management_auth_rejects_session_signer_context.1.json  management_threshold_requires_weighted_quorum.1.json  pause_and_unpause_toggle_status.1.json  payment_execution_rejects_non_payment_adapter_type.1.json  policy_engine_replacement_requires_governance_role.1.json  recovery_can_be_cancelled_before_finalize.1.json  recovery_mode_actions_require_frozen_or_pending_state.1.json  recovery_mode_can_replace_policy_engine_and_lock_execution_surfaces.1.json  (+10 more)
(+40 files in other folders)
