[workspace]
members = [
    "contracts/smart_account",
    "contracts/intent_registry",
    "contracts/policy_engine",
    "contracts/condition_verifier",
    "contracts/recovery_manager",
    "contracts/adapters/transfer_adapter",
    "contracts/adapters/split_adapter",
    "contracts/adapters/swap_adapter",
    "contracts/adapters/yield_adapter",
    "shared/types",
    "shared/events",
    "shared/errors",
    "shared/auth",
    "shared/testutils",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = { version = "22.0.1", features = [] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
