[package]
name = "spf-condition-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
spf-shared-types = { path = "../../shared/types" }
spf-shared-errors = { path = "../../shared/errors" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ed25519-dalek = "2.1.1"
rand = "0.8.5"
