[package]
name = "spf-intent-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
spf-shared-types = { path = "../../shared/types" }
spf-shared-events = { path = "../../shared/events" }
spf-shared-errors = { path = "../../shared/errors" }
